--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -28,7 +28,7 @@
                                             <div class="carousel-item active">
                                                 <div class="d-flex justify-content-between mb-4 pb-2">
                                                     <div>
-                                                        <h2 class="display-2" th:text="${recordNow.temperature + '°C'}"><strong>2°C</strong></h2>
+                                                        <h2 class="display-2" th:text="${#numbers.formatDecimal(recordNow.temperature,1,1, 'POINT') + '°C'}"><strong>2°C</strong></h2>
                                                         <p class="text-muted mb-0">Gliwice, Poland</p>
                                                     </div>
                                                     <div>
@@ -55,9 +55,10 @@
                                             <div class="carousel-item active">
                                                 <div class="d-flex justify-content-around text-center mb-4 pb-3 pt-2">
                                                     <div class="flex-column" th:each="record : ${recordsHourly}">
-                                                        <p class="small" th:text="${record.temperature + '°C'}" style="font-weight: bold">2°C</p>
+                                                        <p class="small" th:text="${#numbers.formatDecimal(record.temperature,1,1, 'POINT') + '°C'}" style="font-weight: bold">2°C</p>
                                                         <i class="mdi mdi-weather-snowy-heavy" style="font-size: 30px"></i>
-                                                        <p class="mb-0" th:text="${record.getDate().getHour()%12}"><strong>12:00</strong></p>
+                                                        <p th:if="${record.getDate().getHour()%12 == 0}" class="mb-0" th:text="'12'"><strong>12:00</strong></p>
+                                                        <p th:unless="${record.getDate().getHour()%12 == 0}" class="mb-0" th:text="${record.getDate().getHour()%12}"><strong>12:00</strong></p>
                                                         <p class="mb-0 text-muted" th:text="${record.getDate().getHour() <= 12 ? 'AM' : 'PM'}" style="font-size: .65rem;">PM</p>
                                                     </div>
                                                 </div>
@@ -80,7 +81,7 @@
                                             <div class="carousel-item active">
                                                 <div class="d-flex justify-content-around text-center mb-4 pb-3 pt-2">
                                                     <div class="flex-column" th:each="record : ${recordsDaily}">
-                                                        <p class="small" th:text="${record.temperature + '°C'}" style="font-weight: bold">2°C</p>
+                                                        <p class="small" th:text="${#numbers.formatDecimal(record.temperature,1,1, 'POINT') + '°C'}" style="font-weight: bold">2°C</p>
                                                         <i class="mdi mdi-weather-snowy-heavy" style="font-size: 30px"></i>
                                                         <p class="mb-0" th:text="${#strings.capitalize(#strings.toLowerCase(record.getDate().getDayOfWeek()).substring(0,3))}" style="font-weight: bold">12:00</p>
                                                     </div>
@@ -116,12 +117,12 @@
                                         <i class="mdi mdi-weather-sunset-down"></i><span class="align-middle" style="font-size: 16px"> 16:19</span>
                                     </div>
                                     <div>
-                                        <i class="mdi mdi-water"></i><span class="align-middle" th:text="${recordNow.getHumidity()*100 + '%'}" style="padding-right: 67px; font-size: 16px"> 24%</span>
-                                        <i class="mdi mdi-thermometer"></i><span class="align-middle" th:text="${recordNow.getTemperature() + '°C'}" style="font-size: 16px"> 3°C</span>
+                                        <i class="mdi mdi-water"></i><span class="align-middle" th:text="${#numbers.formatDecimal(recordNow.humidity*100,1,1, 'POINT') + '%'}" style="padding-right: 67px; font-size: 16px"> 24%</span>
+                                        <i class="mdi mdi-thermometer"></i><span class="align-middle" th:text="${#numbers.formatDecimal(recordNow.temperature,1,1, 'POINT') + '°C'}" style="font-size: 16px"> 3°C</span>
                                     </div>
                                     <div>
-                                        <i class="mdi mdi-gauge"></i><span class="align-middle" th:text="${' ' + recordNow.getPressure() + 'hPa'}" style="padding-right: 30px; font-size: 16px"> 1012hPa</span>
-                                        <i class="mdi mdi-sun-wireless-outline"></i><span class="align-middle" th:text="${' ' + recordNow.getExposure()/10 + '%'}" style="font-size: 16px"> 20%</span>
+                                        <i class="mdi mdi-gauge"></i><span class="align-middle" th:text="${' ' + #numbers.formatDecimal(recordNow.pressure,1,1, 'POINT') + 'hPa'}" style="padding-right: 30px; font-size: 16px"> 1012hPa</span>
+                                        <i class="mdi mdi-sun-wireless-outline"></i><span class="align-middle" th:text="${' ' + #numbers.formatDecimal(recordNow.exposure/10,1,1, 'POINT') + '%'}" style="font-size: 16px"> 20%</span>
                                     </div>
                                 </h2>
                                 <span class="d-flex justify-content-center" th:text="${'Last update: ' + recordNowFormattedDate}" style="font-size: 10px">Last update: 19:15 30/11/2021</span>
