--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -14,7 +14,7 @@
                     <div class="row d-flex justify-content-center align-items-center h-100" style="color: #282828;">
                         <div class="col-md-10">
 
-                            <div class="card mb-4 gradient-custom" style="border-radius: 25px;">
+                            <div class="card mb-4" th:classappend="${recordNow.temperature > 10 ? 'gradient-custom-warm' : 'gradient-custom-cold'}" style="border-radius: 25px">
                                 <div class="card-body p-4">
 
                                     <div id="demo1" class="carousel slide" data-ride="carousel">
