--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -4,6 +4,7 @@
 <body>
     <link rel="stylesheet" th:href="@{/stylesheets/mainPageStylesheets.css}"/>
     <link rel="stylesheet" th:href="@{/stylesheets/clockStyle.css}"/>
+    <link rel="stylesheet" th:href="@{/stylesheets/whiteFooterStyle.css}"/>
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 
