Added about page with contenct of project. Closes #18.

--- a/src/main/resources/templates/layouts/mainlayout.html
+++ b/src/main/resources/templates/layouts/mainlayout.html
@@ -47,9 +47,9 @@
     <footer>
         <div class="row">
             <ul class="soc-media">
-                <li><a href="#" class="fa fa-twitter"></a></li>
-                <li><a href="#" class="fa fa-facebook"></a></li>
-                <li><a href="#" class="fa fa-envelope"></a></li>
+                <li><a href="https://twitter.com" class="fa fa-twitter"></a></li>
+                <li><a href="https://facebook.com" class="fa fa-facebook"></a></li>
+                <li><a href="https://gmail.com" class="fa fa-envelope"></a></li>
             </ul>
         </div>
         <div class="row">
