Closes #62. Fixed padding on index page details section.

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -132,30 +132,30 @@
                                 <a><span class="badge min"></span></a>:
                                 <a><span class="badge sec"></span></a>
                             </h2>
-                        <div class="card" style="border-radius: 25px; width: 18rem">
+                        <div class="card" style="border-radius: 25px; width: 19rem">
                             <div class="card-body p-4">
-                                <div class="d-flex flex-column card-title mt-2" style="font-size: 24px">
-                                    <div class="d-flex flex-row justify-content-sm-between" >
-                                        <div>
-                                            <i class="mdi mdi-weather-sunset-up"></i><span class="align-middle" style="font-size: 16px">7:52</span>
+                                <div class="card-title" style="font-size: 24px">
+                                    <div class="row">
+                                        <div class="col">
+                                            <i class="mdi mdi-weather-sunset-up"></i><span class="align-middle" style="font-size: 16px"> 7:52</span>
                                         </div>
-                                        <div>
-                                            <i class="mdi mdi-weather-sunset-down"></i><span class="align-middle" style="font-size: 16px">16:19</span>
+                                        <div class="col text-center">
+                                            <i class="mdi mdi-weather-sunset-down"></i><span class="align-middle" style="font-size: 16px"> 16:19</span>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-row justify-content-sm-between">
-                                        <div>
+                                    <div class="row">
+                                        <div class="col">
                                             <i class="mdi mdi-gauge"></i><span class="align-middle" th:text="${' ' + #numbers.formatDecimal(recordNow.pressure,1,1, 'POINT') + 'hPa'}" style="font-size: 16px"> 1012hPa</span>
                                         </div>
-                                        <div>
+                                        <div class="col text-center">
                                             <i class="mdi mdi-water"></i><span class="align-middle" th:text="${#numbers.formatDecimal(recordNow.humidity*100,1,1, 'POINT') + '%'}" style="font-size: 16px"> 24%</span>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-row justify-content-sm-between">
-                                        <div>
-                                            <i class="mdi mdi-thermometer"></i><span class="align-middle" th:text="${#numbers.formatDecimal(recordNow.temperature,1,1, 'POINT') + '°C'}" style="font-size: 16px"> 3°C</span>
+                                    <div class="row">
+                                        <div class="col">
+                                            <i class="mdi mdi-thermometer"></i><span class="align-middle" th:text="${' ' + #numbers.formatDecimal(recordNow.temperature,1,1, 'POINT') + '°C'}" style="font-size: 16px"> 3°C</span>
                                         </div>
-                                        <div>
+                                        <div class="col text-center">
                                             <i class="mdi mdi-sun-wireless-outline"></i><span class="align-middle" th:text="${' ' + #numbers.formatDecimal(recordNow.exposure*100,1,1, 'POINT') + '%'}" style="font-size: 16px"> 20%</span>
                                         </div>
                                     </div>
